Refactoring of the Area's hierarchy

--- a/src/Solutions/Configurator/Configurator.dproj
+++ b/src/Solutions/Configurator/Configurator.dproj
@@ -188,6 +188,8 @@
         <DCCReference Include="..\..\Modules\UI\WinVCL\Forms\SplashForm.pas">
             <Form>SplashFm</Form>
         </DCCReference>
+        <DCCReference Include="..\..\Modules\UI\uSampleArea.pas"/>
+        <DCCReference Include="..\..\Modules\UI\uSamplePresenter.pas"/>
         <DCCReference Include="..\..\Modules\Storage\OLEDB\ADOX_TLB.pas"/>
         <DCCReference Include="..\..\Modules\Storage\OLEDB\uDBConnector.pas"/>
         <DCCReference Include="..\..\Modules\Storage\OLEDB\uOLEDBStorage.pas"/>
