Новый Тип  Лэйаута

--- a/bin/solutions/configurator/settings.ini
+++ b/bin/solutions/configurator/settings.ini
@@ -1,5 +1,6 @@
 [Core]
 Deployment=dev
+EnvironmentID={8B7F97AF-8D74-40B4-ADA1-7CA31213B027}
 
 [MSAccess]
 Database=configurator.mdb
@@ -11,3 +12,5 @@ ReportEngine=FastReport
 ChartPainter=VCL
 UI=Windows.DevExpress
 TaskEngine=simpleengine
+[MSAccess.OLEDB]
+Database=configurator.mdb
