--- a/src/Solutions/Configurator/Configurator.dproj
+++ b/src/Solutions/Configurator/Configurator.dproj
@@ -73,7 +73,7 @@
         <ILINK_FullDebugInfo>true</ILINK_FullDebugInfo>
         <BCC_DebugLineNumbers>true</BCC_DebugLineNumbers>
         <BCC_SourceDebuggingOn>true</BCC_SourceDebuggingOn>
-        <Icon_MainIcon>favicon.ico</Icon_MainIcon>
+        <Icon_MainIcon>Configurator_Icon1.ico</Icon_MainIcon>
         <VerInfo_Locale>1033</VerInfo_Locale>
         <AppEnableRuntimeThemes>true</AppEnableRuntimeThemes>
         <BT_BuildType>Debug</BT_BuildType>
@@ -81,7 +81,6 @@
         <DCC_Optimize>false</DCC_Optimize>
         <VerInfo_Keys>CompanyName=;FileDescription=;FileVersion=0.5.0.0;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProductName=;ProductVersion=0.5.0.0;Comments=</VerInfo_Keys>
         <DCC_DebugInfoInExe>false</DCC_DebugInfoInExe>
-        <VerInfo_MajorVer>0</VerInfo_MajorVer>
         <DCC_ExeOutput>..\..\..\bin</DCC_ExeOutput>
         <DCC_DcuOutput>..\..\..\dcu</DCC_DcuOutput>
         <VerInfo_MinorVer>5</VerInfo_MinorVer>
