Платформа X-Tend, версия 0.5

--- a/bin/solutions/configurator/settings.ini
+++ b/bin/solutions/configurator/settings.ini
@@ -1,5 +1,6 @@
 [Core]
 Deployment=dev
+EnvironmentID={FCE982A0-A321-434C-AD28-34ABAB3602FB}
 
 [MSAccess]
 Database=configurator.mdb
@@ -11,3 +12,5 @@ ReportEngine=FastReport
 ChartPainter=VCL
 UI=Windows.DevExpress
 TaskEngine=simpleengine
+[MSAccess.OLEDB]
+Database=configurator.mdb
