Restored and fixed all functionality

--- a/bin/solutions/configurator/settings.ini
+++ b/bin/solutions/configurator/settings.ini
@@ -1,16 +1,12 @@
 [Core]
 Deployment=dev
-EnvironmentID={FCE982A0-A321-434C-AD28-34ABAB3602FB}
-
-[MSAccess]
-Database=configurator.mdb
-Version=0.1
 
 [Modules]
-DataStorage=MSAccess.OLEDB
+DataStorage=SQLite
 ReportEngine=FastReport
 ChartPainter=VCL
 UI=Windows.DevExpress
 TaskEngine=simpleengine
-[MSAccess.OLEDB]
-Database=configurator.mdb
+
+[SQLite]
+Database=configurator.db
