--- a/src/Solutions/Configurator/Configurator.dproj
+++ b/src/Solutions/Configurator/Configurator.dproj
@@ -84,6 +84,7 @@
         <DCC_ExeOutput>..\..\..\bin</DCC_ExeOutput>
         <DCC_DcuOutput>..\..\..\dcu</DCC_DcuOutput>
         <VerInfo_MinorVer>5</VerInfo_MinorVer>
+        <DCC_DebugDCUs>true</DCC_DebugDCUs>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_2)'!=''">
         <Manifest_File>None</Manifest_File>
