--- a/bin/solutions/configurator/settings.ini
+++ b/bin/solutions/configurator/settings.ini
@@ -7,7 +7,7 @@ _Layout=mdi
 DataStorage=SQLite
 ReportEngine=FastReport
 ChartPainter=VCL
-UI=Windows.DevExpress
+UI=Windows.VCL
 TaskEngine=simpleengine
 
 [SQLite]
