--- a/src/Solutions/Configurator/Configurator.dproj
+++ b/src/Solutions/Configurator/Configurator.dproj
@@ -1,12 +1,12 @@
 ﻿<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
     <PropertyGroup>
         <ProjectGuid>{8B5BC586-6CF6-4D24-B607-FAE6D89AE487}</ProjectGuid>
-        <ProjectVersion>18.2</ProjectVersion>
+        <ProjectVersion>18.3</ProjectVersion>
         <FrameworkType>VCL</FrameworkType>
         <MainSource>Configurator.dpr</MainSource>
         <Base>True</Base>
         <Config Condition="'$(Config)'==''">Debug</Config>
-        <Platform Condition="'$(Platform)'==''">Win64</Platform>
+        <Platform Condition="'$(Platform)'==''">Win32</Platform>
         <TargetedPlatforms>3</TargetedPlatforms>
         <AppType>Application</AppType>
     </PropertyGroup>
@@ -111,6 +111,7 @@
         <DCC_RemoteDebug>false</DCC_RemoteDebug>
         <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
         <VerInfo_Locale>1033</VerInfo_Locale>
+        <DCC_DebugInfoInExe>false</DCC_DebugInfoInExe>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_2)'!=''">
         <DCC_LocalDebugSymbols>false</DCC_LocalDebugSymbols>
@@ -190,6 +191,9 @@
         <DCCReference Include="..\..\Modules\UI\WinVCL\Editors\vclListEditors.pas"/>
         <DCCReference Include="..\..\Modules\UI\WinVCL\Editors\vclBlobEditors.pas"/>
         <DCCReference Include="..\..\Modules\UI\WinVCL\Editors\vclPopupForm.pas"/>
+        <DCCReference Include="..\..\Modules\UI\WinVCL\VST\uVST.pas"/>
+        <DCCReference Include="..\..\Modules\UI\WinVCL\VST\VirtualTrees.pas"/>
+        <DCCReference Include="..\..\Modules\UI\WinVCL\VST\VTAccessibilityFactory.pas"/>
         <DCCReference Include="..\..\Modules\UI\WinVCL\Forms\uManagedForm.pas"/>
         <DCCReference Include="..\..\Modules\UI\WinVCL\Forms\StartForm.pas">
             <Form>StartFm</Form>
@@ -223,6 +227,8 @@
         </DCCReference>
         <DCCReference Include="..\..\Modules\UI\WinVCL\DevExpress\uDevExpressPresenter.pas"/>
         <DCCReference Include="..\..\Modules\UI\WinVCL\DevExpress\Editors\uDEArea.pas"/>
+        <DCCReference Include="..\..\Modules\UI\WinVCL\DevExpress\Editors\uDESimpleEditors.pas"/>
+        <DCCReference Include="..\..\Modules\UI\WinVCL\DevExpress\Editors\uDEListEditors.pas"/>
         <DCCReference Include="..\..\Modules\Storage\SQLite\uSQLite3.pas"/>
         <DCCReference Include="..\..\Modules\Storage\SQLite\uSQLiteStorage.pas"/>
         <DCCReference Include="..\..\Modules\Drawing\VCL\uVCLPainter.pas"/>
