--- a/bin/solutions/configurator/settings.ini
+++ b/bin/solutions/configurator/settings.ini
@@ -7,8 +7,8 @@ _Layout=mdi
 DataStorage=SQLite
 ReportEngine=FastReport
 ChartPainter=VCL
-_UI=Windows.DevExpress
-UI=Windows.VCL
+UI=Windows.DevExpress
+_UI=Windows.VCL
 TaskEngine=simpleengine
 
 [SQLite]
